# lexiconweaver-core

./: .gitignore  README.md  pyproject.toml
config/: default.toml
src/lexiconweaver/: config.py  default_config.toml  logging_config.py
src/lexiconweaver/cli/: commands.py
src/lexiconweaver/database/: manager.py
src/lexiconweaver/engines/: batch_manager.py  scout.py  scout_refiner.py  weaver.py
src/lexiconweaver/providers/: deepseek.py
src/lexiconweaver/tui/: app.py
src/lexiconweaver/tui/screens/: __init__.py  main_screen.py  translation_screen.py
src/lexiconweaver/tui/widgets/: __init__.py  candidate_list.py  export_modal.py  term_modal.py  text_panel.py  translation_panel.py
src/lexiconweaver/utils/: __init__.py  document_loader.py  document_writer.py  text_processor.py  validators.py
tests/unit/: test_scout.py
